--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,6 @@
 extends layout.pug 
-
+block style 
+    link(rel="stylesheet", href="style.css")
 block content
   h1 Home
   p Welcome to the home page!
