--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title meow 
+        block style 
     body 
         section#navbar 
             ul
