--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,3 +14,6 @@ html(lang="en")
                     a(href="/about") About
                 li 
                     a(href="/contact") Contact
+        block content
+        footer 
+            p © 2023 Meow. All rights reserved.
