--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,6 @@
 extends layout.pug 
 block style 
-    link(rel="stylesheet", href="/static/style.css")
+    link(rel="stylesheet", href="/static/home.css")
 block content
   h1 Home
   p Welcome to the home page!
