--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title meow 
         block style 
+            link(rel="stylesheet", href="/static/navbar.css")
     body 
         section#navbar 
             ul
