--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,5 +16,5 @@ html(lang="en")
                 li 
                     a(href="/contact") Contact
         block content
-        footer 
+        footer#footer 
             p © 2023 Meow. All rights reserved.
