--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,14 +7,14 @@ html(lang="en")
         link(rel="stylesheet", href="/static/navbar.css")
         block style 
     body 
-        block content
         section#navbar 
             ul
                 li 
                     a(href="/") Home
                 li 
-                    a(href="/about") About
+                    a(href="/Menu") Menu
                 li 
-                    a(href="/contact") Contact
+                    a(href="/contact") Order 
+        block content
         footer#footer 
             p © 2023 Meow. All rights reserved.
