--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,4 +17,4 @@ html(lang="en")
                     a(href="/contact") Order 
         block content
         footer#footer 
-            p © 2023 Meow. All rights reserved.
+            p © Wrapstick Restaurant. All rights reserved.
