--- a/views/home.pug
+++ b/views/home.pug
@@ -2,10 +2,6 @@ extends layout.pug
 block style 
     link(rel="stylesheet", href="/static/home.css")
 block content
-  h1 Home
-  p Welcome to the home page!
-  p This is a simple example of a Pug template.
-  p You can use Pug to create dynamic HTML pages easily.
-  p For more information, visit the Pug documentation.
-  p You can also use Pug with Express.js to render views in your web applications.
-  p Have fun coding!
+    section#home-1 
+        h1 Welcome to Wrapstick Restaurant
+        p We serve the best wraps in town!
