--- a/static/home.css
+++ b/static/home.css
@@ -1,14 +1,23 @@
-#home-1{
-    background-color: rgb(202, 232, 189);
+#home-1::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("static/images/home-img.jpg");
+    background-size: cover;
+    background-position: center;
+    opacity: 0.5;
 }
-h1{
-    color: rgb(221, 246, 210);
+#home-1 h1{
+    color: rgb(236, 250, 229);
     font-size: 2em;
     text-align: center;
 
 }
-p{
-    color: rgb(221, 246, 210);
+#home-1 p{
+    color: rgb(236, 250, 229);
     font-size: 1.2em;
     text-align: center;
 }
