--- a/static/home.css
+++ b/static/home.css
@@ -1,5 +1,7 @@
 #home-1{
-    height: 700px;
+    height: 500px;
+    position: relative;
+    padding-top: 50px;
 }
 #home-1::before{
     content: "";
@@ -11,16 +13,24 @@
     background-image: url("images/home-img.jpg");
     background-size: cover;
     background-position: center;
-    opacity: 0.5;
+    opacity: 0.7;
+    z-index: 0;
+}
+.hh{
+    padding-top: 90px;
 }
 #home-1 h1{
-    color: rgb(236, 250, 229);
-    font-size: 2em;
+    color: rgb(103, 13, 47);
+    font-size: 4rem;
     text-align: center;
+    z-index: 1;
+    position: relative;
 
 }
 #home-1 p{
-    color: rgb(236, 250, 229);
-    font-size: 1.2em;
+    color: rgb(103, 13, 47);
+    font-size: 2rem;
     text-align: center;
+    z-index: 1;
+    position: relative;
 }
