--- a/static/navbar.css
+++ b/static/navbar.css
@@ -3,18 +3,32 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* logo */
+#logo{
+    padding-bottom: 20px;
+    z-index: 1;
+}
+#logo img{
+    width: 65px;
+    height: 65px;
+    border-radius: 10px;
+    /* border: 2px solid rgb(255, 255, 255); */
+    float: right;
+    margin: 20px;
+}
 /* Navbar */
 #navbar{
     font-family: "Tektur", sans-serif;
-    background-color: rgb(176, 219, 156);
+    background-color: rgb(58, 5, 25);
     color: rgb(236, 250, 229);
     z-index: 1;
-    position: fixed;
+    position:relative
 }
 #navbar ul{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /* justify-content: center; */
+    text-align: left;
     padding: 20px;
 }
 #navbar li{
@@ -22,17 +36,16 @@
 }
 #navbar li a{
     text-decoration: none;
-    padding: 5px 60px;
+    padding: 5px 30px;
     color: rgb(236, 250, 229);
     font-size: 1.4rem;
 }
 #navbar li a:hover{
-    font-weight: bold;
-    color: rgb(69, 47, 105);
+    color: rgb(228, 249, 41);
 }
 /* Footer  */
 #footer{
     height: 50px;
-    background-color: rgb(176, 219, 156);
+    background-color: rgb(58, 5, 25);
     color:rgb(236, 250, 229);
 }
