--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,13 +8,15 @@ html(lang="en")
         block style 
     body 
         section#navbar 
+            div#logo 
+                img(src="/static/images/wrap-3.png", alt="Wrapstick Logo")
             ul
                 li 
                     a(href="/") Home
                 li 
                     a(href="/Menu") Menu
                 li 
-                    a(href="/contact") Order 
+                    a(href="/order") Order 
         block content
         footer#footer 
             p © Wrapstick Restaurant. All rights reserved.
