--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,9 @@ extends layout.pug
 block style 
     link(rel="stylesheet", href="/static/home.css")
 block content
-    section#home-1 
-        h1 Welcome to Wrapstick Restaurant
-        p We serve the best wraps in town!
+    #home-1 
+        .hh 
+            h1 Welcome to Wrapstick
+            p We serve the best food in town! With a menu desinged to satisfy all your cravings.
+
     
