--- a/views/home.pug
+++ b/views/home.pug
@@ -1,10 +1,12 @@
 extends layout.pug 
 block style 
-    link(rel="stylesheet", href="/static/home.css")
+    link(rel="stylesheet", href="/static/CSS/home.css")
 block content
     #home-1 
         .hh 
             h1 Welcome to Wrapstick
             p We serve the best food in town! With a menu desinged to satisfy all your cravings.
+        .btn-h 
+            a(href="/order") Order Now
 
     
