--- a/static/CSS/navbar.css
+++ b/static/CSS/navbar.css
@@ -45,7 +45,9 @@
 }
 /* Footer  */
 #footer{
-    height: 50px;
+    height: 20px;
     background-color: rgb(58, 5, 25);
     color:rgb(236, 250, 229);
+    text-align: center;
+
 }
